--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs: # workflow 文件的主体，表示要执行的一项或多项任务
       - name: Install and Build 🔧 # 该步骤的名称
         run: | # 该步骤运行的命令或者 action
           yarn
-          npm run build
+          npm run docs:build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
